--- a/SmsAlarm/Makefile
+++ b/SmsAlarm/Makefile
@@ -36,7 +36,7 @@ error:
 	$(error Invalid configuration, please check your inputs)
 endif
 
-SOURCEFILES := ../Src/gpio.c ../Src/system_stm32f1xx.c ../Src/tim.c ../Src/usart.c ../Src/stm32f1xx_it.c ../Src/stm32f1xx_hal_msp.c ../Src/main.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_uart.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c $(BSP_ROOT)/STM32F1xxxx/StartupFiles/startup_stm32f103xe.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c ../Src/freertos.c ../Src/stm32f1xx_hal_timebase_tim.c ../Middlewares/Third_Party/FreeRTOS/Source/croutine.c ../Middlewares/Third_Party/FreeRTOS/Source/event_groups.c ../Middlewares/Third_Party/FreeRTOS/Source/list.c ../Middlewares/Third_Party/FreeRTOS/Source/queue.c ../Middlewares/Third_Party/FreeRTOS/Source/tasks.c ../Middlewares/Third_Party/FreeRTOS/Source/timers.c ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.c ../Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_1.c ../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3/port.c
+SOURCEFILES := ../Src/gpio.c ../Src/smsAlarm.c ../Src/system_stm32f1xx.c ../Src/tim.c ../Src/usart.c ../Src/stm32f1xx_it.c ../Src/stm32f1xx_hal_msp.c ../Src/main.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_uart.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c $(BSP_ROOT)/STM32F1xxxx/StartupFiles/startup_stm32f103xe.c ../Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c ../Src/freertos.c ../Src/stm32f1xx_hal_timebase_tim.c ../Middlewares/Third_Party/FreeRTOS/Source/croutine.c ../Middlewares/Third_Party/FreeRTOS/Source/event_groups.c ../Middlewares/Third_Party/FreeRTOS/Source/list.c ../Middlewares/Third_Party/FreeRTOS/Source/queue.c ../Middlewares/Third_Party/FreeRTOS/Source/tasks.c ../Middlewares/Third_Party/FreeRTOS/Source/timers.c ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.c ../Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_1.c ../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3/port.c
 EXTERNAL_LIBS := 
 EXTERNAL_LIBS_COPIED := $(foreach lib, $(EXTERNAL_LIBS),$(BINARYDIR)/$(notdir $(lib)))
 
@@ -183,6 +183,10 @@ $(BINARYDIR)/%.o : %.cxx $(all_make_files) |$(BINARYDIR)
 
 
 $(BINARYDIR)/gpio.o : ../Src/gpio.c $(all_make_files) |$(BINARYDIR)
+	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+
+$(BINARYDIR)/smsAlarm.o : ../Src/smsAlarm.c $(all_make_files) |$(BINARYDIR)
 	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
 
 
